Move from pippo to javalin as javalin is more light-weight Update libraries Move gson to "li.pitschmann.knx.core.plugin.api.v1.gson" package
